# HTTCPP

./: CMakeLists.txt  README.md
include/: HTTPClient.h  HTTPSClient.h  TCPClient.h  URL.h
include/TLS/: Random.h  TLSHandshake.h
src/: HTTPClient.cpp  HTTPSClient.cpp  URL.cpp  main.cpp
src/TLS/: Random.cpp  TLSHandshake.cpp
src/linux/: TCPClient.cpp
src/windows/: TCPClient.cpp
